# wormhole_nav

./: README.md
task1/: README.md  turtlebot3_office.launch.py
task1/maps/: map1.pgm  map1.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml
task2/: README.md
task2/wormhole_tools/: CMakeLists.txt  package.xml
task2/wormhole_tools/config/: wormhole_params.yaml
task2/wormhole_tools/src/: wormhole_recorder.cpp  wormhole_recorder.cpp.bak  wormhole_recorder.cpp.bak2  wormhole_recorder.cpp.bak3
task3/: README.md
task3/simple_navigation/: CMakeLists.txt  package.xml
task3/simple_navigation/launch/: simple_nav_launch.py
task3/simple_navigation/src/: auto_localize_and_nav copy.cpp  auto_localize_and_nav.cpp
task4/: README.md  ignition1.py  maps_world_files.csv  nav3.sh
task4/auto_nav_pipeline/: CMakeLists.txt  package.xml
task4/auto_nav_pipeline/config/: auto_nav_config.yaml
task4/auto_nav_pipeline/launch/: auto_nav.launch copy.py  auto_nav.launch.py
task4/auto_nav_pipeline/src/: auto_nav_node.cpp
